force-app/main/default/objects/Product__c/fields/BRONZE_Category_Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>BRONZE_Category_Minimum_Quantity__c</fullName>
    <label>BRONZE Category Minimum Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>