force-app/main/default/objects/Product__c/fields/Category_Active__c.field-meta.xml
<CustomField>
    <fullName>Category_Active__c</fullName>
    <formula>Product_Category1__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Active</label>
    <type>Checkbox</type>
</CustomField>