force-app/main/default/objects/Product__c/fields/Distributive_Price_10__c.field-meta.xml
<CustomField>
    <fullName>Distributive_Price_10__c</fullName>
    <formula>Distributive_Price__c + (Distributive_Price__c *10/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributive Price+10%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>