force-app/main/default/objects/Product__c/fields/Flavors__c.field-meta.xml
<CustomField>
    <fullName>Flavors__c</fullName>
    <label>Flavors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>Flavors</fullName>
            </value>
            <value>
                <fullName>CHOCOLATE</fullName>
            </value>
            <value>
                <fullName>VANILLA</fullName>
            </value>
            <value>
                <fullName>BUTTERSCOTCH</fullName>
            </value>
            <value>
                <fullName>FRUIT SALAD</fullName>
            </value>
            <value>
                <fullName>Thiramisu</fullName>
            </value>
            <value>
                <fullName>BONBON</fullName>
            </value>
            <value>
                <fullName>STRAWBERRY</fullName>
            </value>
            <value>
                <fullName>Lemon</fullName>
            </value>
            <value>
                <fullName>BON BON</fullName>
            </value>
            <value>
                <fullName>TIRAMISU</fullName>
            </value>
            <value>
                <fullName>DREAM CAKE</fullName>
            </value>
            <value>
                <fullName>COTTON CANDY</fullName>
            </value>
            <value>
                <fullName>RED VELVET</fullName>
            </value>
            <value>
                <fullName>BLACK CURRANT</fullName>
            </value>
            <value>
                <fullName>PISTA</fullName>
            </value>
            <value>
                <fullName>BUTTERSCOTCH With Caramel Balls</fullName>
            </value>
            <value>
                <fullName>Vanila</fullName>
            </value>
            <value>
                <fullName>SPANISH DELIGHT</fullName>
            </value>
            <value>
                <fullName>butterscotch choclate</fullName>
            </value>
            <value>
                <fullName>Vanila Delight</fullName>
            </value>
            <value>
                <fullName>DISCOUNT</fullName>
            </value>
            <value>
                <fullName>KULFI</fullName>
            </value>
            <value>
                <fullName>Tender Coconut Water</fullName>
            </value>
            <value>
                <fullName>JACKFRUIT</fullName>
            </value>
            <value>
                <fullName>COOKIES &amp; CREAM</fullName>
            </value>
            <value>
                <fullName>VANILLA CHOCLATE</fullName>
            </value>
            <value>
                <fullName>CARAMEL LATTE</fullName>
            </value>
            <value>
                <fullName>Ice Cream Sandwich</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>