force-app/main/default/objects/Product__c/fields/GOLD_Category_Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>GOLD_Category_Minimum_Quantity__c</fullName>
    <label>GOLD Category Minimum Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>