force-app/main/default/objects/Product__c/fields/HSN_Description__c.field-meta.xml
<CustomField>
    <fullName>HSN_Description__c</fullName>
    <label>HSN Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>