force-app/main/default/objects/Product__c/fields/isCategoryActive__c.field-meta.xml
<CustomField>
    <fullName>isCategoryActive__c</fullName>
    <formula>Product_Category1__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isCategoryActive</label>
    <type>Checkbox</type>
</CustomField>