force-app/main/default/objects/Product__c/fields/Machine_Category__c.field-meta.xml
<CustomField>
    <fullName>Machine_Category__c</fullName>
    <label>Machine Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CF</fullName>
            </value>
            <value>
                <fullName>CONE MACHINE</fullName>
            </value>
            <value>
                <fullName>CUP FILLER</fullName>
            </value>
            <value>
                <fullName>EXTRUSION</fullName>
            </value>
            <value>
                <fullName>LABOUR</fullName>
            </value>
            <value>
                <fullName>ROLLO</fullName>
            </value>
            <value>
                <fullName>SIPUP MACHINE</fullName>
            </value>
            <value>
                <fullName>SPX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>