force-app/main/default/objects/Product__c/fields/MFR_Name__c.field-meta.xml
<CustomField>
    <fullName>MFR_Name__c</fullName>
    <label>MFR Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMAZE ASSOCIATE</fullName>
            </value>
            <value>
                <fullName>DEVBHUMI NATURAL PRODUCTS PRODUCERS CO L</fullName>
            </value>
            <value>
                <fullName>DOWN TO EARTH</fullName>
            </value>
            <value>
                <fullName>GOODRICKE GROUP LIMITED</fullName>
            </value>
            <value>
                <fullName>GOODRICKE GROUP LIMITED(H)</fullName>
            </value>
            <value>
                <fullName>HITA LIFE VENTURES PRIVATE LIMITED</fullName>
            </value>
            <value>
                <fullName>INDIAN DENTAL ORGANIZATION</fullName>
            </value>
            <value>
                <fullName>KAI BEAUTY WARE</fullName>
            </value>
            <value>
                <fullName>KAI BRUSH</fullName>
            </value>
            <value>
                <fullName>KAI HOME WARE</fullName>
            </value>
            <value>
                <fullName>KAI RAZORS</fullName>
            </value>
            <value>
                <fullName>KHADI NATURAL HEALTHCARE</fullName>
            </value>
            <value>
                <fullName>MEHROTRA CONSUMER PRODUCTS PVT LTD</fullName>
            </value>
            <value>
                <fullName>NATURE LAND</fullName>
            </value>
            <value>
                <fullName>ORGANIC INDIA PVT LTD</fullName>
            </value>
            <value>
                <fullName>PRO NATURE ORGANIC FOODS PVT LTD</fullName>
            </value>
            <value>
                <fullName>SRESTA BIO NATURAL PRODUCTS</fullName>
            </value>
            <value>
                <fullName>WO HERBAL COSMETICS</fullName>
            </value>
            <value>
                <fullName>WO HERBAL POWDERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>