force-app/main/default/objects/Product__c/fields/Product_category__c.field-meta.xml
<CustomField>
    <fullName>Product_category__c</fullName>
    <label>Product category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Category</valueSetName>
    </valueSet>
</CustomField>