force-app/main/default/objects/Product__c/fields/Product_Features_and_Images__c.field-meta.xml
<CustomField>
    <fullName>Product_Features_and_Images__c</fullName>
    <label>Product Features and Images</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>