force-app/main/default/objects/Product__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finished Goods</fullName>
                <default>true</default>
                <label>Finished Goods</label>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
                <isActive>false</isActive>
                <label>Asset</label>
            </value>
            <value>
                <fullName>Capital Items</fullName>
                <isActive>false</isActive>
                <label>Capital Items</label>
            </value>
            <value>
                <fullName>Consumables</fullName>
                <isActive>false</isActive>
                <label>Consumables</label>
            </value>
            <value>
                <fullName>Finished Components</fullName>
                <isActive>false</isActive>
                <label>Finished Components</label>
            </value>
            <value>
                <fullName>Fuel</fullName>
                <isActive>false</isActive>
                <label>Fuel</label>
            </value>
            <value>
                <fullName>Gift Items</fullName>
                <isActive>false</isActive>
                <label>Gift Items</label>
            </value>
            <value>
                <fullName>License export</fullName>
                <isActive>false</isActive>
                <label>License export</label>
            </value>
            <value>
                <fullName>Loss</fullName>
                <isActive>false</isActive>
                <label>Loss</label>
            </value>
            <value>
                <fullName>Maintenance Items</fullName>
                <isActive>false</isActive>
                <label>Maintenance Items</label>
            </value>
            <value>
                <fullName>Non Inventory Item</fullName>
                <isActive>false</isActive>
                <label>Non Inventory Item</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Packing Material</fullName>
                <isActive>false</isActive>
                <label>Packing Material</label>
            </value>
            <value>
                <fullName>Purchase Items</fullName>
                <isActive>false</isActive>
                <label>Purchase Items</label>
            </value>
            <value>
                <fullName>Raw Material</fullName>
                <isActive>false</isActive>
                <label>Raw Material</label>
            </value>
            <value>
                <fullName>Scrap</fullName>
                <isActive>false</isActive>
                <label>Scrap</label>
            </value>
            <value>
                <fullName>Semi - Finished Goods</fullName>
                <isActive>false</isActive>
                <label>Semi - Finished Goods</label>
            </value>
            <value>
                <fullName>Spare Parts</fullName>
                <isActive>false</isActive>
                <label>Spare Parts</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>