force-app/main/default/objects/Product__c/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ORGANIC FOOD</fullName>
            </value>
            <value>
                <fullName>HERBAL COSMETICS</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>