force-app/main/default/objects/Product__c/fields/Silver_Category_Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Silver_Category_Minimum_Quantity__c</fullName>
    <label>Silver Category Minimum Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>