force-app/main/default/objects/Product__c/fields/Sku_Name__c.field-meta.xml
<CustomField>
    <fullName>Sku_Name__c</fullName>
    <label>Sku Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>