force-app/main/default/objects/Product__c/fields/Specifications__c.field-meta.xml
<CustomField>
    <fullName>Specifications__c</fullName>
    <label>Specifications</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>