force-app/main/default/objects/Product__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAPER PACK</fullName>
            </value>
            <value>
                <fullName>BULK</fullName>
            </value>
            <value>
                <fullName>BALL</fullName>
            </value>
            <value>
                <fullName>BAR</fullName>
            </value>
            <value>
                <fullName>CUPS</fullName>
            </value>
            <value>
                <fullName>GLASS</fullName>
            </value>
            <value>
                <fullName>CASSATTA</fullName>
            </value>
            <value>
                <fullName>CONES</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
            <value>
                <fullName>CONTAINER</fullName>
            </value>
            <value>
                <fullName>CANDY</fullName>
            </value>
            <value>
                <fullName>MINI TUBS</fullName>
            </value>
            <value>
                <fullName>SIPIE</fullName>
            </value>
            <value>
                <fullName>SYRUP</fullName>
            </value>
            <value>
                <fullName>WHIPPING CREAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>