force-app/main/default/objects/Product__c/fields/Tax_Class2__c.field-meta.xml
<CustomField>
    <fullName>Tax_Class2__c</fullName>
    <label>Tax Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ITC18%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>