force-app/main/default/objects/Product__c/fields/Tax_Class__c.field-meta.xml
<CustomField>
    <fullName>Tax_Class__c</fullName>
    <label>Tax Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Class</valueSetName>
    </valueSet>
</CustomField>