force-app/main/default/objects/Product__c/fields/TAX_Per_GST__c.field-meta.xml
<CustomField>
    <fullName>TAX_Per_GST__c</fullName>
    <label>TAX Per(GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>