force-app/main/default/objects/Product__c/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <label>TaxRate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>