force-app/main/default/objects/Product__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nos</fullName>
            </value>
            <value>
                <fullName>KGS</fullName>
            </value>
            <value>
                <fullName>LTR</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>MTR</fullName>
            </value>
            <value>
                <fullName>Jar</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Degree</fullName>
                <isActive>false</isActive>
                <label>Degree</label>
            </value>
            <value>
                <fullName>Month</fullName>
                <isActive>false</isActive>
                <label>Month</label>
            </value>
            <value>
                <fullName>Percentage</fullName>
                <isActive>false</isActive>
                <label>Percentage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>